--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,13 @@
     },
     "require": {
         "php": "^7.4 || ^8.0",
+        "ext-gd": "*",
         "ext-intl": "*",
         "ext-json": "*",
         "ext-mbstring": "*",
         "laminas/laminas-escaper": "^2.9",
         "mpdf/mpdf": "^8.2",
+        "nesbot/carbon": "^2.71",
         "phpoffice/phpspreadsheet": "^1.29",
         "psr/log": "^1.1"
     },
@@ -26,7 +28,7 @@
         "kint-php/kint": "^5.0.4",
         "mikey179/vfsstream": "^1.6",
         "nexusphp/cs-config": "^3.6",
-        "phpunit/phpunit": "^9.1",
+        "phpunit/phpunit": "^9.6",
         "predis/predis": "^1.1 || ^2.0"
     },
     "suggest": {
